fixed: z-index of text block

--- a/frontend/src/components/self-driving-cars-main/index.css
+++ b/frontend/src/components/self-driving-cars-main/index.css
@@ -46,7 +46,7 @@
         position: absolute;
         bottom: -298px;
         right: 0;
-        z-index: 5;
+        z-index: 1;
         color: var(--color-black);
         padding: 0 30px 0 16px;
     }
